{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 14,
  "lineage": "05d065f2-77b0-8661-8ff5-a9f7bfd5ab5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e06a436e9184bfe5",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:elastic-ip/eipalloc-0e06a436e9184bfe5",
            "association_id": "eipassoc-05cad609b835cd37c",
            "domain": "vpc",
            "id": "eipalloc-0e06a436e9184bfe5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e01837a808971527",
            "private_dns": "ip-192-168-1-162.ap-south-1.compute.internal",
            "private_ip": "192.168.1.162",
            "public_dns": "ec2-13-126-211-37.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.211.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:internet-gateway/igw-0d20ff56977f575a1",
            "id": "igw-0d20ff56977f575a1",
            "owner_id": "767397922031",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e06a436e9184bfe5",
            "association_id": "eipassoc-05cad609b835cd37c",
            "connectivity_type": "public",
            "id": "nat-00240d46f5fd2159c",
            "network_interface_id": "eni-0e01837a808971527",
            "private_ip": "192.168.1.162",
            "public_ip": "13.126.211.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d02d24e138995d15",
            "tags": {
              "Name": "terraform-nat"
            },
            "tags_all": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-0e94585add057de9b",
            "id": "rtb-0e94585add057de9b",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d20ff56977f575a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt1"
            },
            "tags_all": {
              "Name": "terraform-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-0c6c352623d2ea083",
            "id": "rtb-0c6c352623d2ea083",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00240d46f5fd2159c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt2"
            },
            "tags_all": {
              "Name": "terraform-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02993df06f5072353",
            "route_table_id": "rtb-0e94585add057de9b",
            "subnet_id": "subnet-0d2e67a0e58e6c41a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f82e4a9776b82244",
            "route_table_id": "rtb-0c6c352623d2ea083",
            "subnet_id": "subnet-0d02d24e138995d15"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.nat",
            "aws_route_table.rt2",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:security-group/sg-0d1bf50115e43c8e1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1bf50115e43c8e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-sg",
            "name_prefix": "",
            "owner_id": "767397922031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-sg"
            },
            "tags_all": {
              "Name": "vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-0d02d24e138995d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d02d24e138995d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-tf"
            },
            "tags_all": {
              "Name": "private-tf"
            },
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-0d2e67a0e58e6c41a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e67a0e58e6c41a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-tf"
            },
            "tags_all": {
              "Name": "public-tf"
            },
            "vpc_id": "vpc-0e3eba27b51ba5c83"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:vpc/vpc-0e3eba27b51ba5c83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-078e55d3687ce37c2",
            "default_route_table_id": "rtb-0fbb2b2bd456f7870",
            "default_security_group_id": "sg-02e3a842f4018dab8",
            "dhcp_options_id": "dopt-0c4428013e72b7af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3eba27b51ba5c83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbb2b2bd456f7870",
            "owner_id": "767397922031",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}